<?xml version="1.0"?>
<package format="3">
  <name>moveit_grasps</name>
  <version>2.0.0</version>
  <description>
    A basic grasp generator for objects such as blocks or cylinders for use with the MoveIt! pick and place pipeline.
    Does not consider friction cones or other dynamics.
  </description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <maintainer email="mcevoy.andy@gmail.com">Andy McEvoy</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/PickNikRobotics/moveit_grasps/</url>
  <url type="bugtracker">https://github.com/PickNikRobotics/moveit_grasps/issues</url>
  <url type="repository">https://github.com/PickNikRobotics/moveit_grasps</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>
  <author email="mcevoy.andy@gmail.com">Andy McEvoy</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>rcpputils</build_depend>
  <!-- <build_depend>message_generation</build_depend> -->
  <build_depend>moveit_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- <exec_depend>message_runtime</exec_depend> -->
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>rosparam_shortcuts</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>panda_moveit_config</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
